samples/_failures_safe/1761394396_cb6909_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82a09b02.c: In function ‘main’:
./samples/SAFE/__tmp_82a09b02.c:201:19: error: expected ‘;’ at end of input
  201 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_82a09b02.c:201:13: error: expected declaration or statement at end of input
  201 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_82a09b02.c:201:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82a09b02.c:201:13: error: expected declaration or statement at end of input
